# ZhiXue-Lite-backend

./: .env.docker  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  example.env  gunicorn.conf.py  pyproject.toml
.github/: test.yml
.github/workflows/: publish.yml  quick-test.yml  test.yml
config/: config.example.json
migrations/versions/: 16a5143b032b_add_timeout_to_background_task.py  1fd6d957dc99_add_is_saved_to_exams_table.py  260b0c22c1d0_initial_migration.py  2f3f9ee5d7e6_init.py  38ca2ff82611_add_is_calculated_field_to_score_table.py  4a4620974d1e_add_child_id_to_zhixue_student_accounts.py  4ebb572977c9_add_hide_field_to_backgroundtask.py  51d4ec993033_update_to_sqlalchemy_2_0.py  59bc834850cd_add_student_number.py  6510b2581cbb_add_email_verification.py  660f639ac18a_support_multi_school_exams_with_exam_.py  6fb6951200c9_add_indexes.py  8a8ae69f04e6_add_standard_score.py  8f207c221c7c_add_sort_in_scores.py  97044c08487c_add_subject_name_in_scores.py  9b2ca8a0ff05_add_support_for_assigned_scores.py  a3f0f217940b_clean_up_indexes.py  c46e6498afc0_add_permissions_in_users_table.py  cc5a4fa49bbf_change_type_of_score_rank_to_string.py  ccfc91a0b3c9_add_is_parent_to_zhixue_student_accounts.py  d8c20202f147_remove_deprecated_columns.py  db1b8daea843_fix_typo.py  df2fc9140777_init.py  dfb60c7bd851_init.py  f05d42acf190_initial_migration.py  f1af8f43beff_save_encrypted_zhixue_passwords.py  f9a2cb7e36f3_remove_subjects.py  f9f74ce37f23_add_realname.py
src/ZhiXueLite/: main.py
src/ZhiXueLite/app/: __init__.py  config.py  database.py  models.py
src/ZhiXueLite/app/admin/: routes.py
src/ZhiXueLite/app/database/: __init__.py  models.py
src/ZhiXueLite/app/exam/: models.py  routes.py
src/ZhiXueLite/app/models/: dataclasses.py  exceptions.py  student.py  teacher.py  zhixuedb.py
src/ZhiXueLite/app/task/: __init__.py  handlers.py  manager.py  models.py  repository.py  routes.py
src/ZhiXueLite/app/teacher/: models.py  routes.py
src/ZhiXueLite/app/user/: models.py  routes.py
src/ZhiXueLite/app/utils/: answersheet.py  config_loader.py  crypto.py  email.py  logger.py  login.py  login_zhixue.py  paginate.py  turnstile.py  zhixue.py
src/ZhiXueLite/app/utils/account/: student.py  teacher.py
src/ZhiXueLite/task_worker/: database.py  logger.py  manager.py  repository.py  runner.py  start.py
src/ZhiXueLite/task_worker/handlers/: __init__.py  email.py  exam.py
tests/: conftest.py  test_api_admin.py  test_api_exam.py  test_api_task.py  test_api_teacher.py  test_api_user.py  test_basic.py  test_exam_helper.py  test_models_exam.py  test_models_student.py  test_models_task.py  test_models_teacher.py  test_models_user.py  test_permissions.py
