[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ZhiXueLite"
version = "0.0.1"
description = "智学网接口的第三方实现"
authors = [
    { name = "amakerlife", email = "64350662+amakerlife@users.noreply.github.com" }
]
license = { text = "AGPL-3.0" }
requires-python = ">= 3.10"
dependencies = [
    "Flask==3.1.2",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.1.0",
    "Flask-Login==0.6.3",
    "Flask-Session==0.8.0",
    "loguru==0.7.3",
    "requests==2.32.4",
    "zhixuewang==1.3.4",
    "openpyxl==3.1.5",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.1",
    "Flask-Limiter==3.12",
    "flask-cors==6.0.1",
    "gunicorn==23.0.0"
]

[tool.setuptools.packages.find]
where = ["src", "src/ZhiXueLite"]