[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ZhiXueLite"
version = "0.1.0"
description = "智学网接口的第三方实现"
authors = [
    { name = "amakerlife", email = "64350662+amakerlife@users.noreply.github.com" }
]
license = { text = "AGPL-3.0" }
requires-python = ">= 3.10"
dependencies = [
    "Flask==3.1.2",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.1.0",
    "Flask-Login==0.6.3",
    "Flask-Session==0.8.0",
    "loguru==0.7.3",
    "requests==2.32.5",
    "zhixuewang==1.3.4",
    "openpyxl==3.1.5",
    "pillow==12.0.0",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.2.1",
    "Flask-Limiter==4.0.0",
    "flask-cors==6.0.1",
    "gunicorn==23.0.0"
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-flask==1.3.0",
    "pytest-cov==6.0.0",
]

[tool.setuptools.packages.find]
where = ["src", "src/ZhiXueLite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src/ZhiXueLite",
    "--cov-report=html",
    "--cov-report=term-missing",
]