[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ZhiXueLite"
version = "0.4.2"
description = "智学网接口的第三方实现"
authors = [
    { name = "amakerlife", email = "64350662+amakerlife@users.noreply.github.com" }
]
license = { text = "AGPL-3.0" }
requires-python = ">= 3.10"
dependencies = [
    "Flask==3.1.2",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.1.0",
    "Flask-Login==0.6.3",
    "Flask-Session==0.8.0",
    "Flask-Caching==2.3.1",
    "Flask-Limiter[redis]==4.1.1",
    "flask-cors==6.0.2",
    "loguru==0.7.3",
    "requests==2.32.5",
    "zhixuewang==1.3.4",
    "openpyxl==3.1.5",
    "pillow==12.1.1",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.2.1",
    "gunicorn==25.1.0",
    "cryptography==46.0.5",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.2",
    "pytest-flask==1.3.0",
    "pytest-cov==7.0.0",
]

[tool.setuptools.packages.find]
where = ["src", "src/ZhiXueLite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src/ZhiXueLite",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.autopep8]
max_line_length = 120
indent_size = 4